[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/helpers/CamHelper.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Environment" id=1]
background_energy = 5.0
glow_enabled = true
glow_intensity = 2.97
glow_strength = 0.78
glow_bloom = 0.48
glow_blend_mode = 0
glow_hdr_threshold = 0.84
glow_hdr_luminance_cap = 25.06
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_contrast = 1.49
adjustment_saturation = 3.21

[node name="cam_helper" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="Camera2D"]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="grid" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
format = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="cl" type="CanvasLayer" parent="."]

[node name="mc" type="MarginContainer" parent="cl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="cl/mc"]
margin_right = 40.0
margin_bottom = 68.0

[node name="lbl1" type="Label" parent="cl/mc/vbox"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="lbl2" type="Label" parent="cl/mc/vbox"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="lbl3" type="Label" parent="cl/mc/vbox"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="lbl4" type="Label" parent="cl/mc/vbox"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )

[node name="fogs" type="Node2D" parent="."]
